Fix weird width issue on iPhone

--- a/thesarvoguide2/src/com/thesarvo/guide/client/view/res/guide.css
+++ b/thesarvoguide2/src/com/thesarvo/guide/client/view/res/guide.css
@@ -215,7 +215,7 @@ padding-top: 2px;
 	
 	xxpadding-left:6px;
 	font-weight:bold;
-	white-space: nowrap;
+	/*white-space: nowrap;*/
 	font-size: FONTSIZE !important;
 	font-family:  FONT !important;
 }
